SERVER-45011 Index used for whole IXSCAN plan is determined by index creation order